--- a/LineWizard.GUI/LineWizard.GUI.csproj
+++ b/LineWizard.GUI/LineWizard.GUI.csproj
@@ -64,4 +64,8 @@
       <ProjectReference Include="..\LineWizard.Shared\LineWizard.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\" />
+    </ItemGroup>
+
 </Project>
